--- a/trunk/README
+++ b/trunk/README
@@ -49,7 +49,7 @@ which, when used together, provide rudimentary access to remote SNMP
 
 This module differs from existing SNMP packages in that it is
 completely stand-alone, i.e. you don't need to have another SNMP
-package such as CMU SNMP.  It is also written entirely in Perl, so you
+package such as Net-SNMP.  It is also written entirely in Perl, so you
 don't have to compile any C modules.  It uses the Perl 5 Socket.pm
 module and should therefore be very portable, even to non-Unix systems.
 
