--- a/README
+++ b/README
@@ -40,6 +40,7 @@ This program is free software; you can redistribute it under the
                     Luc Pauwels  <Luc.Pauwels@xalasys.com>
                    Milen Pavlov  <milen@batmbg.com>
        Andrew Cornford-Matheson  <andrew.matheson@corenetworks.com>
+                   Gerry Dalton  <gerry.dalton@consolidated.com>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
