--- a/trunk/README
+++ b/trunk/README
@@ -41,6 +41,7 @@ This program is free software; you can redistribute it under the
                    Milen Pavlov  <milen@batmbg.com>
        Andrew Cornford-Matheson  <andrew.matheson@corenetworks.com>
                    Gerry Dalton  <gerry.dalton@consolidated.com>
+		 Jan van Keulen  <cologne@email.com>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
