--- a/trunk/README
+++ b/trunk/README
@@ -7,7 +7,7 @@
 This program is free software; you can redistribute it under the
 "Artistic License" included in this distribution (file "Artistic").
 
-	       Author: Simon Leinen  <simon@switch.ch>
+	       Author: Simon Leinen  <simon.leinen@switch.ch>
 			    Contributors:
 		 Tobias Oetiker	 <tobi@oetiker.ch>
 	       Matthew Trunnell	 <matter@media.mit.edu>
