--- a/wiki/Features.wiki
+++ b/wiki/Features.wiki
@@ -9,8 +9,8 @@ SNMP_Session.pm provides access to management instrumentation on remote SNMP age
 
 This module differs from existing SNMP packages in that it is completely stand-alone, i.e. you don't need to have another SNMP package such as Net-SNMP. It is also written entirely in Perl, so you don't have to compile any C modules. It uses the Perl 5 Socket.pm module and should therefore be very portable, even to non-Unix systems.
 
-Note: For the development of new scripts, I strongly recommend to use the higher-level programming interface provided by SNMP_util.pm. Its use is described in README.SNMP_util. The remainder of this page desribes the low-level API in SNMP_Session.pm, which you normally shouldn't use.
+Note: For the development of new scripts, I strongly recommend to use the higher-level programming interface provided by SNMP_util.pm. Its use is described in README.SNMP_util. 
 
-The SNMP operations currently supported are "get", "get-next", "get-bulk" and "set", as well as trap generation and reception.
+The SNMP operations currently supported are `get`, `get-next`, `get-bulk` and `set`, as well as trap generation and reception.
 
-For an excellent example of the type of application this is useful for, see Tobias Oetiker's ``mrtg'' (Multi Router Traffic Grapher) tool. Another application that uses this library is IOG (Input/Output Grapher).
+For an excellent example of the type of application this is useful for, see Tobias Oetiker's [http://oss.oetiker.ch/mrtg/ mrtg] (Multi Router Traffic Grapher) tool. Another application that uses this library is IOG (Input/Output Grapher).
