--- a/trunk/README
+++ b/trunk/README
@@ -42,6 +42,7 @@ This program is free software; you can redistribute it under the
        Andrew Cornford-Matheson  <andrew.matheson@corenetworks.com>
                    Gerry Dalton  <gerry.dalton@consolidated.com>
 		 Jan van Keulen  <cologne@email.com>
+	       Armin Wolfermann  <armin@wolfermann.org>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
