Add Allan Jude to contributors

--- a/README
+++ b/README
@@ -43,6 +43,7 @@ This program is free software; you can redistribute it under the
                    Gerry Dalton  <gerry.dalton@consolidated.com>
 		 Jan van Keulen  <cologne@email.com>
 	       Armin Wolfermann  <armin@wolfermann.org>
+	             Allan Jude  <allanjude@freebsd.org>
 
 	http://www.switch.ch/misc/leinen/snmp/perl/index.html
 
