--- a/README
+++ b/README
@@ -11,7 +11,7 @@ This program is free software; you can redistribute it under the
                             Contributors:
                  Tobias Oetiker  <tobi@oetiker.ch>
                Matthew Trunnell  <matter@media.mit.edu>
-                 Andrzej Tobola  <san@iem.pw.edu.pl>
+                 Andrzej Toboła  <san@iem.pw.edu.pl>
                       Dave Rand  <dlr@Bungi.com>
                    Heine Peters  <peters@dkrz.de>
                       Yufang HU  <yhu@casc.com>
